overflow-x-mobile-fix

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -1,5 +1,9 @@
 /*  1. Basic  ------------------------------------------------------- */
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background-color: #313131;
   font-family: 'opensans-regular', sans-serif;
